Chart of Account Localization and UI fixes

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -101,30 +101,30 @@
                                                 
                                                 <div class="row modal-bottom-record">
                                                    <div class="col-md-12">
-                                                       <p>Charts Of Account Format </p>
+                                                       <p>{{"Charts Of Account Format" | localize}} <a style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Upload Sample File" | localize}}</u></a></p>
                                                        <div class="inner-col-record border border-default">
    
                                                            <div class="row">
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>Account Name</p>
+                                                                   <p>{{"Account Name" | localize}}</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>Account Number</p>
+                                                                   <p>{{"Account Number" | localize}}</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>Account Type</p>
+                                                                   <p>{{"Account Type" | localize}}</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>Account Sub Type</p>
+                                                                   <p>{{"Account Sub Type" | localize}}</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>Assigned User</p>
+                                                                   <p>{{"Assigned User" | localize}}</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                    <p>Reconciliation type</p>
+                                                                    <p>{{"Reconciliation type" | localize}}</p>
                                                                 </div>
                                                                 <div class="modal-bottom-row-col1">
-                                                                    <p>Reconciliation as</p>
+                                                                    <p>{{"Reconciliation as" | localize}}</p>
                                                                 </div>
                                                            </div>
                                                        </div>
@@ -134,18 +134,18 @@
                                         <div *ngIf="balance">
                                             <div class="row modal-bottom-record">
                                                 <div class="col-md-12">
-                                                    <p>Trial Balance Format </p>
+                                                    <p>{{"Trial Balance Format" | localize}} <a style="color:blue;margin-left: 20px;cursor: pointer;"><u>Upload Sample File</u></a></p>
                                                     <div class="inner-col-record border border-default">
 
                                                         <div class="row">
                                                             <div class="modal-bottom-row-col">
-                                                                <p>Account Name</p>
+                                                                <p>{{"Account Name" | localize}}</p>
                                                             </div>
                                                             <div class="modal-bottom-row-col">
-                                                                <p>Account Number</p>
+                                                                <p>{{"Account Number" | localize}}</p>
                                                             </div>
                                                             <div class="modal-bottom-row-col">
-                                                                <p>Balance</p>
+                                                                <p>{{"Balance" | localize}}</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -212,7 +212,7 @@
 
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary"
-                                                data-dismiss="modal">Close</button>
+                                                data-dismiss="modal">{{"Close" | localize}}</button>
                                             <button type="button" class="btn btn-primary"  data-dismiss="modal" (click)="SaveChanges()" >Save changes</button>
                                         </div>
                                     </div>
