--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -20,9 +20,9 @@
                                         <span>{{"Amortized List" | localize}}</span>
                                     </h3>
                                     <h6 class="ml-3 mb-0">
-                                        Account No
+                                        {{"Account No" | localize}}
                                         <span class="bg-lightgrey badge badge-secondary bagesTextColor">{{accountNo}}</span>
-                                        Account Name
+                                        {{"Account Name" | localize}}
                                         <span class="bg-lightgrey badge badge-secondary bagesTextColor">{{accountName}}</span>
                                     </h6>
 
@@ -31,7 +31,7 @@
                                     <div class="kt-subheader__wrapper">
                                         <a class="mr-3" href="javascript: void(0);" (click)="BackToReconcileList()">
                                             <i class="la la-arrow-left"></i>
-                                            Back
+                                            {{"Back" | localize}}
                                         </a>
 
                                         <button class="btn btn-brand" (click)="RedirectToAddNewItem()"><i
@@ -71,28 +71,28 @@
                                 <ng-template pTemplate="header">
                                     <tr  class="task-table-inner">
                                         <th class="accountNo-cell" scope="col" pSortableColumn="AccountNumber">
-                                            Start Date
+                                            {{"Start Date" | localize}}
                                             <p-sortIcon field="AccountNumber"></p-sortIcon>
                                         </th>
                                         <th class="accountType-cell " scope="col">
-                                            End Date
+                                            {{"End Date"  | localize}}
                                         </th>
                                         <th class="accountName-cell" scope="col" pSortableColumn="AccountType">
-                                            Description
+                                            {{"Description" | localize}}
                                             <p-sortIcon field="AccountType"></p-sortIcon>
                                         </th>
                                         <th class="reconciliation-cell" scope="col">
-                                            Beginning Amount
+                                            {{"Beginning Amount" | localize}}
                                         </th>
                                         <th class="accountSubtype-cell" scope="col">
-                                            Accrued Amortization
+                                            {{"Accrued Amortization" | localize}}
                                         </th>
                                         <th class="assignee-cell" scope="col" pSortableColumn="AssigneeId">
-                                            Net Amount
+                                            {{"Net Amount" | localize}}
                                             <p-sortIcon field="AssigneeId"></p-sortIcon>
                                         </th>
                                         <th class="action-cell" scope="col">
-                                            Attachments
+                                            {{"Attachments" | localize}}
                                         </th>
 
                                         <th class="cell-none">
@@ -157,7 +157,7 @@
                                                 <div  class="drag_drop_box">
                                                      <div  class="attachments_section_none">
                                                         <a  *ngIf="item.attachments?.length == 0"class="attachement_btn">
-                                                            <span>No Attachments</span>
+                                                            <span>{{"No Attachments" | localize}}</span>
                                                         </a>
                                                     </div>    
                                                 </div>
@@ -179,7 +179,7 @@
                                     <td>
                                         <ul>
                                             <li>
-                                                <div class="thead-box"><b>Net Amount : </b></div>
+                                                <div class="thead-box"><b>{{"Net Amount" | localize}} : </b></div>
                                                 <div *ngIf="item.netAmount"  class="tdata-box">
                                                     <span class=""> {{item.netAmount | formater}}</span>
                                                 </div>
@@ -189,7 +189,7 @@
                                                 
                                             </li>
                                             <li >
-                                                <div class="thead-box"><b> Attachments : </b></div>
+                                                <div class="thead-box"><b> {{"Attachments" | localize}} : </b></div>
                                                 <div class="tdata-box d-flex">
                                                    
                                                     <div class="d-flex">
@@ -222,7 +222,7 @@
                                                         <div  class="drag_drop_box">
                                                              <div  class="attachments_section_none">
                                                                 <a  *ngIf="item.attachments?.length == 0"class="attachement_btn">
-                                                                    <span>No Attachments</span>
+                                                                    <span>{{"No Attachments" | localize}}</span>
                                                                 </a>
                                                             </div>    
                                                         </div>
@@ -257,8 +257,8 @@
                         <div class="col-md-6">
                             <div>
                                 <select class="input-medium">
-                                    <option>Comments</option>
-                                    <option>History</option>
+                                    <option>{{"Comments" | localize}}</option>
+                                    <option>{{"History" | localize}}</option>
                                 </select>
                             </div>
                             <div class="commentmainView show-comments">
@@ -288,7 +288,7 @@
                                 </div>
                             </div>
                             <div class="form-group giveCommentView" *ngIf="commantBox">
-                                <label>Comments</label>
+                                <label>{{"Comments" | localize}}</label>
                                 <div (click)="commentClick()">
                                     <div class="kt-user-card-v2">
                                         <div class="kt-user-card-v2__pic">
@@ -311,12 +311,12 @@
                             </div>
 
                             <div class="form-group " *ngIf="!commantBox">
-                                <label>Comments</label>
+                                <label>{{"Comments" | localize}}</label>
                                 <p-editor [(ngModel)]="comment" (keydown.space)="$event.preventDefault();" required name="HtmlEditorInput"
                                     [style]="{'height':'150px'}">
                                 </p-editor>
-                                <button class="btn btn-brand" (click)="onComment()">Comment</button>
-                                <button class="btn btn-brand" (click)="onCancelComment()">Cancel</button>
+                                <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
+                                <button class="btn btn-brand" (click)="onCancelComment()">{{"Cancel" | localize}}</button>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -325,26 +325,26 @@
                                     <thead>
                                         <tr>
                                             <th></th>
-                                            <th class="text-navyblue">Beginning Amount</th>
-                                            <th class="text-navyblue">Accrued Amortization</th>
-                                            <th class="text-navyblue">Net Amount</th>
+                                            <th class="text-navyblue">{{"Beginning Amount" | localize}}</th>
+                                            <th class="text-navyblue">{{"Accrued Amortization" | localize}}</th>
+                                            <th class="text-navyblue">{{"Net Amount" | localize}}</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td class="text-navyblue">Total:</td>
+                                            <td class="text-navyblue">{{"Total" | localize}}:</td>
                                             <td class="text-blue"> {{begininngAmount| formater }}</td>
                                             <td class="text-blue"> {{accuredAmount| formater }}</td>
                                             <td class="text-blue"> {{netAmount | formater}}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-navyblue">Trial Balance:</td>
+                                            <td class="text-navyblue">{{"Trial Balance" | localize}}:</td>
                                             <td class="text-blue"  >{{trialBalanceBeginning | formater}}</td>
                                             <td class="text-blue"  >{{trialBalanceAccured | formater}}</td>
                                             <td class="text-blue"  >{{trialBalanceNet | formater}}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-navyblue">Varience:</td>
+                                            <td class="text-navyblue">{{"Varience" | localize}}:</td>
                                             <td class="text-blue" > {{varianceBeginning | formater}}</td>
                                             <td class="text-blue" > {{varianceAccured | formater}}</td>
                                             <td class="text-blue" > {{varianceNet | formater}}</td>
@@ -353,7 +353,7 @@
                                 </table>
                             </div>
                             <div class="Check-reconcile-btn">
-                                <button class="btn btn-brand" >Check as Reconciled</button>
+                                <button class="btn btn-brand" >{{"Check as Reconciled" | localize}}</button>
                             </div>
                         </div>
                     </div>
