--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -5,13 +5,13 @@
                 <div class="kt-portlet__head">
                     <div class="kt-portlet__head-label">
                         <h3 class="text-navyblue kt-portlet__head-title">
-                            Itemized Details
+                            {{"Itemized Details" | localize}}
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
                         <a href="javascript: void(0);" (click)="BackToList()">
                             <i class="la la-arrow-left"></i>
-                            Back
+                            {{"Back" | localize}}
                         </a>
                         <div class="btn-group">
 
@@ -34,12 +34,12 @@
                                 <div class="item-card-box d-flex flex-wrap">
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/calendar-o.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">Date</span>
+                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Date" | localize}}</span>
                                         <span class="d-block text-lightgrey">{{itemizationDto.date | date}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/money.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">Amount</span>
+                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Amount" | localize}}</span>
                                         <span class="d-block text-lightgrey">$ {{itemizationDto.amount | formater}}</span>
                                     </div>
                                 </div>
@@ -48,13 +48,12 @@
                                 <div class="item-card-box d-flex flex-wrap">
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/bill.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">Invoice No.</span>
+                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"InvoiceNo" | localize}}.</span>
                                         <span class="d-block text-lightgrey">{{itemizationDto.inoviceNo}}</span>
                                     </div>
                                     <div class="item-card rounded mr-3 mb-3">
                                         <img src="../../../../assets/img/calendar-o.svg" alt="bill" class="my-3">
-                                        <span class="d-block mb-1 text-navyblue item-card-title">Journal Entry
-                                            No.</span>
+                                        <span class="d-block mb-1 text-navyblue item-card-title">{{"Journal Entry No" | localize}}.</span>
                                         <span class="d-block text-lightgrey">{{itemizationDto.journalEntryNo}}</span>
                                     </div>
                                 </div>
@@ -64,12 +63,12 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="attachment-box">
-                                    <label>Description</label>
+                                    <label>{{"Description" | localize}}</label>
                                     <p>{{itemizationDto.description}}</p>
                                 </div>
                                 <select class="form-control input-medium">
-                                    <option>Comments</option>
-                                    <option>History</option>
+                                    <option>{{"Comments"  | localize}}</option>
+                                    <option>{{"History" | localize}}</option>
                                 </select>
 
                                 <div class="commentmainView show-comments">
@@ -100,7 +99,7 @@
                                 </div>
                                 
                                 <div class="form-group giveCommentView" *ngIf="commantBox">
-                                    <label>Comments</label>
+                                    <label>{{"Comments" | localize}}</label>
                                     <div (click)="commentClick()">
                                         <div class="kt-user-card-v2">
                                             <div class="kt-user-card-v2__pic">
@@ -122,18 +121,18 @@
                                 </div>
 
                                 <div class="form-group " *ngIf="!commantBox">
-                                    <label>Comments</label>
+                                    <label>{{"Comments" | localize}}</label>
                                     <p-editor [(ngModel)]="comment" name="HtmlEditorInput"
                                         [style]="{'height':'150px'}">
                                     </p-editor>
-                                    <button class="btn btn-brand" (click)="onComment()">Comment</button>
-                                    <button class="btn btn-brand" (click)="onCancelComment()">Cancel</button>
+                                    <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
+                                    <button class="btn btn-brand" (click)="onCancelComment()">{{"Cancel" | localize}}</button>
                                 </div>
                             </div>
 
                             <div class="col-sm-6">
                                 <div class="drag_drop_box">
-                                    <label>Attachments</label>
+                                    <label>{{"Attachments" | localize}}</label>
                                     <ng-uppy [config]="settings" (uploadResult)="fileUploadedResponse($event)">
                                     </ng-uppy>
                                     <div *ngFor="let item of attachments" class="attachments_section">
