Download Sample File for Chart of Account and Trail Balance is done

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -101,7 +101,7 @@
                                                 
                                                 <div class="row modal-bottom-record">
                                                    <div class="col-md-12">
-                                                       <p>{{"Charts Of Account Format" | localize}} <a style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Upload Sample File" | localize}}</u></a></p>
+                                                       <p>{{"Charts Of Account Format" | localize}} <a href="../../../../assets/ChartOfAccountsList.xlsx"style="color:blue;margin-left: 20px;cursor: pointer;" download="ChartOfAccountsList.xlsx"><u>{{"Upload Sample File" | localize}}</u></a></p>
                                                        <div class="inner-col-record border border-default">
    
                                                            <div class="row">
@@ -134,7 +134,7 @@
                                         <div *ngIf="balance">
                                             <div class="row modal-bottom-record">
                                                 <div class="col-md-12">
-                                                    <p>{{"Trial Balance Format" | localize}} <a style="color:blue;margin-left: 20px;cursor: pointer;"><u>Upload Sample File</u></a></p>
+                                                    <p>{{"Trial Balance Format" | localize}} <a href="../../../../assets/TrailBalance.xlsx" download="../../../../assets/TrailBalance.xlsx"style="color:blue;margin-left: 20px;cursor: pointer;"><u>Upload Sample File</u></a></p>
                                                     <div class="inner-col-record border border-default">
 
                                                         <div class="row">
